# wasm-workflows-plugin

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json  install-argo.sh  install-k8s.sh
.github/workflows/: build-assemblyscript.yml  build-container-image.yml  build-ferris-says.yml  build-http-request.yml  build-image-processor.yml  build-rust.yml  build-rust.yml.yml  build-text2qr.yml  build-tinygo.yml  build.yml  check.yml  create-changelog.yml  create-executor-plugin.yml  e2e-test.yaml  publish-container-image.yml  push.yml  release.yml
argo-plugin/: image.json  kustomization.yaml  plugin-distributed.yaml  plugin.yaml  rbac.yaml
benchmark/: README.md  cleanup.sh  docker-compose.yml  jaeger.yml  krustlet1.yaml  krustlet2.yaml
benchmark/jupyter-data/: one-invocation.ipynb  performance.ipynb  total.ipynb
benchmark/krustlet/: Dockerfile
benchmark/runner/: Cargo.toml  build.rs
benchmark/runner/proto/gogoproto/: gogo.proto
benchmark/runner/proto/google/api/: annotations.proto  http.proto
benchmark/runner/proto/google/protobuf/: duration.proto  timestamp.proto
benchmark/runner/proto/jaeger/: model.proto  query.proto
benchmark/runner/src/: jaeger.rs  main.rs  model.rs  store.rs
crates/workflow-model/: Cargo.toml
crates/workflow-model/doc/: plugin-invocation.example.json  plugin-invocation.schema.json  plugin-result.example.json  plugin-result.schema.json
crates/workflow-model/src/: lib.rs
crates/workflow-model/src/host/: artifacts.rs  mod.rs
crates/workflow-model/src/model/: mod.rs
crates/workflow-model/src/plugin/: mod.rs
demo-mod/: Cargo.toml  README.md
demo-mod/src/: lib.rs
doc/: benefits.md  distributed-mode-rbac.yaml  distributed-mode.md  logging-tracing.md  module-development.md  sample-request.http
doc/kind/: k8s-development.md  kind-config.yaml  minio-values.yaml
doc/kind/argo-workflows/: agent-role.yaml  deployment.yaml  kustomization.yaml  s3.yaml  workflow-controller-configmap.yaml
modules/examples/ferris-says/: README.md  workflow.yaml
modules/examples/ferris-says/src/: lib.rs
plugin/: .gitignore  plugin.yaml  workflow.yaml
src/: main.rs
src/app/: config.rs  dependencies.rs  k8s.rs  mod.rs  tracing.rs
src/app/model/: argo.rs  mod.rs
src/app/wasm/: cache.rs  image.rs  interface.rs  mod.rs  workflow.wit
src/app/wasm/distributed/: mod.rs
src/app/wasm/local/: cache.rs  image.rs  interface.rs  mod.rs
src/app/web/: mod.rs  router.rs
src/app/web/handler/: mod.rs  model.rs  sample-execution-payload.json  sample-execution-response.json
wasm-modules/contrib/http-request/: Cargo.toml  README.md  request.http  workflow.yaml
wasm-modules/contrib/http-request/src/: lib.rs  main.rs
wasm-modules/contrib/image-processor/: Cargo.toml  Dockerfile  README.md  workflow-container.yaml  workflow.yaml
wasm-modules/contrib/image-processor/src/: cli.rs  main.rs
wasm-modules/examples/ferris-says/: Cargo.toml  README.md  request.http  workflow.yaml
wasm-modules/examples/ferris-says/src/: lib.rs  main.rs
wasm-modules/examples/http-request/: Cargo.toml
wasm-modules/examples/http-request/src/: lib.rs
wasm-modules/examples/text2qr/: Cargo.toml  README.md  workflow.yaml
wasm-modules/examples/text2qr/src/: lib.rs  main.rs
wasm-modules/templates/assemblyscript/: .gitignore  index.ts  package-lock.json  package.json
wasm-modules/templates/rust/: Cargo.toml  workflow.yaml
wasm-modules/templates/rust/src/: lib.rs  main.rs
wasm-modules/templates/tinygo/: README.md  main.go  workflow.yaml
