[package]
name = "wasm-workflows-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/workflow-model",
]
exclude = [
    "wasm-modules/examples/ferris-says",
    "wasm-modules/examples/text2qr",
    "wasm-modules/contrib/http-request",
    "wasm-modules/templates/rust"
]

[dependencies]
tracing = { version = "0.1.30", features = ["async-await"] }
tracing-subscriber = { version = "0.3.8", features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.17.2"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"
anyhow = "1.0.53"
itertools = "0.10.3"
zstd = "0.10.0"

tokio = { version = "1.17.0", features = ["full"] }
async-trait = "0.1.52"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tower-http = { version = "0.2.3", features = ["trace", "set-header"] }
clap = { version = "3.1.0", features = ["derive", "env"] }

axum = "0.4.5"
axum-macros = "0.1.2"

wasmtime = "0.34.1"
wasmtime-wasi = "0.34.1"
wasi-common = "0.34.1"
oci-distribution = "0.8.1"
wasi-experimental-http-wasmtime = { git = "https://github.com/deislabs/wasi-experimental-http.git", rev = "4ed321d6943f75546e38bba80e14a59797aa29de" }
cap-std = "0.24.3"

workflow-model = { path = "./crates/workflow-model", features = ["host"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
