[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "3.1.0", features = ["derive", "env"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
tracing = { version = "0.1.35", features = ["async-await"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
kube = { version = "0.72.0", features = ["runtime", "derive"] }
kube-client = "0.72.0"
kube-core = "0.72.0"
kube-runtime = "0.72.0"
schemars = { version = "0.8.10", features = ["derive"] }
rand = "0.8.5"
futures = "0.3.21"
chrono = "0.4.19"
