[package]
name = "workflow-model"
version = "0.1.0"
edition = "2021"

[features]
host = ["dep:tempfile", "dep:aws-creds", "dep:rust-s3", "dep:tokio", "dep:tracing", "dep:rand"]
plugin = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = { version = "3", optional = true }
aws-creds = { version = "0.29", optional = true }
rust-s3 = { version = "0.31", optional = true }
tokio = { version = "1.0", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
