[package]
name = "image-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.54"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
clap = { version = "3.1.0", features = ["derive", "env"] }
tracing = { version = "0.1.35" }
tracing-subscriber = { version = "0.3.11", features = ["registry"] }
tracing-opentelemetry = "0.17.3"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"

[dependencies.photon-rs]
git = "https://github.com/Shark/photon"
rev = "ab1e8069b7cf537c550cf9801d9ea4f5bc938431"
default-features = false

[dependencies.workflow-model]
git = "https://github.com/Shark/wasm-workflows-plugin"
rev = "b49c84bfba1314825c8f4a94f871c67e972cf04c"
features = ["plugin"]
