[package]
name = "text2qr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.54"
qrcode = "0.12.0"
workflow-model = { path = "../../../crates/workflow-model", features = ["plugin"] }
